python/routing_agent_service/k8s/mock-app-yamls/not-used/llama2-7b-router-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama2-7b-router
  namespace: aibrix-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: aibrix-eg
    namespace: aibrix-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: llama2-7b
      namespace: default
      port: 8000
      weight: 1
    matches:
    - headers:
      - name: model
        type: Exact
        value: llama2-7b
      path:
        type: PathPrefix
        value: /v1/completions
    - headers:
      - name: model
        type: Exact
        value: llama2-7b
      path:
        type: PathPrefix
        value: /v1/chat/completions
    timeouts:
      request: 120s
